Renamed login to connection in side menu

--- a/planifets/www/templates/menu.html
+++ b/planifets/www/templates/menu.html
@@ -19,7 +19,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Login
+          Connection
         </ion-item>
         <ion-item menu-close href="#/app/availabilities">
           Course availabilities
