Changed availablities html by adding select options and button

--- a/planifets/www/templates/availabilities.html
+++ b/planifets/www/templates/availabilities.html
@@ -1,5 +1,35 @@
 <ion-view view-title="Availabilities">
   <ion-content>
-    <h1>Availabilities</h1>
+    <div class="list">
+
+      <label class="item item-input item-select">
+        <div class="input-label">
+          Program
+        </div>
+        <select>
+          <option>Bachelor's degrees (B.Ing.)</option>
+        </select>
+      </label>
+
+      <label class="item item-input item-select">
+        <div class="input-label">
+          Field of study
+        </div>
+        <select>
+          <option selected> Automated manufacturing engineering</option>
+          <option>Construction engineering</option>
+          <option>Electrical engineering</option>
+          <option>Information technology engineering</option>
+          <option>Mechanical engineering</option>
+          <option>Operations and logistics engineering</option>
+          <option>Red</option>
+        </select>
+      </label>
+
+      <label class="item">
+        <button class="button button-block button-dark icon-right ion-chevron-right">View availabilities</button>
+      </label>
+
+    </div>
   </ion-content>
 </ion-view>
