--- a/planifets/www/templates/plannings.html
+++ b/planifets/www/templates/plannings.html
@@ -1,9 +1,32 @@
 <ion-view view-title="Plannings">
-  <ion-content>
-    <ion-list>
-      <ion-item ng-repeat="planning in plannings" href="#/app/plannings/{{planning.id}}">
+  <ion-content class="has-footer">
+    <ion-list ng-controller="PlanningsCtrl"
+              show-delete="showDelete"
+              show-reorder="showReorder"
+              can-swipe="listCanSwipe">
+      <ion-item ng-repeat="planning in plannings" href="#/app/plannings/{{planning.id}}" class="item-remove-animate">
         {{planning.title}}
+        <ion-option-button class="button-energized" ng-click="editItem(planning)">Edit</ion-option-button>
+        <ion-option-button class="button-assertive icon ion-trash-a" ng-click="onItemDelete(planning)"></ion-option-button>
+        <ion-reorder-button class="ion-navicon"
+                            on-reorder="moveItem(planning, $fromIndex, $toIndex)">
+        </ion-reorder-button>
       </ion-item>
     </ion-list>
   </ion-content>
+
+  <ion-footer-bar ng-controller="PlanningsCtrl" class="bar-dark">
+    <div class="buttons">
+      <button class="button" ng-click="createPlanning()">
+        Create planning
+      </button>
+    </div>
+    <div class="buttons pull-right">
+      <button class="button" ng-click="toggleReorder()">
+        Reorder
+      </button>
+    </div>
+  </ion-footer-bar>
 </ion-view>
+
+
