Added missing field of study option in availabilities html

--- a/planifets/www/templates/availabilities.html
+++ b/planifets/www/templates/availabilities.html
@@ -22,7 +22,7 @@
           <option>Information technology engineering</option>
           <option>Mechanical engineering</option>
           <option>Operations and logistics engineering</option>
-          <option>Red</option>
+          <option>Software engineering</option>
         </select>
       </label>
 
