Changed header name for plannings.html

--- a/planifets/www/templates/plannings.html
+++ b/planifets/www/templates/plannings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Plannings">
+<ion-view view-title="Course Plannings">
   <ion-content class="has-footer">
     <ion-list ng-controller="PlanningsCtrl"
               show-delete="showDelete"
