--- a/planifets/www/css/style.css
+++ b/planifets/www/css/style.css
@@ -41,3 +41,74 @@
 .col-availabilities-info {
   font-size: x-small;
 }
+
+.span-custom {
+  padding-bottom: 7px;
+}
+
+.item-custom {
+  padding-top: 7px;
+}
+
+.wrapper-custom{
+  margin: 0 auto;
+}
+
+.select-wrapper {
+  width: 86%;
+  float: left;
+  height: 31px;
+}
+
+.item-input-inset-custom {
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 7px;
+}
+
+.button-custom {
+  border-color: lightgray;
+  color: limegreen;
+  min-width: 52px;
+}
+
+.button-custom:hover {
+  color: limegreen;
+  text-decoration: none;
+}
+
+.selected-course-span {
+  padding-bottom: 7px;
+}
+
+.item-selected-course {
+  padding-top: 6px;
+}
+
+.item-input-select-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0;
+  -ms-flex: 1 0;
+  flex: 1 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding-right: 20px;
+  height: 100%;
+}
+
+.ion-item-select {
+  width: 100%;
+}
