Commented out connection option from left side menu since the log in will not be used for now

--- a/planifets/www/templates/menu.html
+++ b/planifets/www/templates/menu.html
@@ -18,9 +18,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Connection
-        </ion-item>
+        <!--<ion-item menu-close ng-click="login()">-->
+          <!--Connection-->
+        <!--</ion-item>-->
         <ion-item menu-close href="#/app/availabilities">
           Course availabilities
         </ion-item>
