Replaced functions when clicking on create planning and edit planning to show dialog instead of new view

--- a/planifets/www/templates/plannings.html
+++ b/planifets/www/templates/plannings.html
@@ -4,9 +4,9 @@
               show-delete="showDelete"
               show-reorder="showReorder"
               can-swipe="listCanSwipe">
-      <ion-item ng-repeat="planning in plannings" href="#/app/plannings/{{planning.id}}" class="item-remove-animate">
+      <ion-item ng-repeat="planning in plannings.semesterPlanning" ng-click="setPlanningList(planning)" href="#/app/plannings/{{planning.id}}" class="item-remove-animate">
         {{planning.title}}
-        <ion-option-button class="button-energized" ng-click="editItem(planning)">Edit</ion-option-button>
+        <ion-option-button class="button-energized" ng-click="showEditPlanningItem(planning)">Edit</ion-option-button>
         <ion-option-button class="button-assertive icon ion-trash-a" ng-click="showConfirm(planning)"></ion-option-button>
         <ion-reorder-button class="ion-navicon"
                             on-reorder="moveItem(planning, $fromIndex, $toIndex)">
@@ -17,9 +17,9 @@
 
   <ion-footer-bar ng-controller="PlanningsCtrl" class="bar-dark">
     <div class="buttons">
-      <button class="button" ng-click="createPlanning()">
+      <a class="button" ng-click="showCreatePlanningDialog('add')">
         Create planning
-      </button>
+      </a>
     </div>
     <div class="buttons pull-right">
       <button class="button" ng-click="toggleReorder()">
