Removed download pdf button from availability view

--- a/planifets/www/templates/availability.html
+++ b/planifets/www/templates/availability.html
@@ -33,10 +33,10 @@
         <div class="col col-80 col-availabilities-info">* : Horaire particulier en mode accéléré<br> Qa : Assurance qualité<br> Ts : Technologies de la santé</div>
       </div>
     </div>
-    <div class="list">
-      <label class="item">
-        <button class="button button-block button-dark" ng-click="downloadPDF()">Download PDF</button>
-      </label>
-    </div>
+    <!--<div class="list">-->
+      <!--<label class="item">-->
+        <!--<button class="button button-block button-dark" ng-click="downloadPDF()">Download PDF</button>-->
+      <!--</label>-->
+    <!--</div>-->
   </ion-content>
 </ion-view>
