--- a/planifets/www/templates/availability.html
+++ b/planifets/www/templates/availability.html
@@ -6,31 +6,23 @@
       </div>
       <div class="row row-top">
         <div class="col col-20 col-header-course">Course</div>
-        <div class="col col-header">{{semesters[0].title}}</div>
-        <div class="col col-header">{{semesters[1].title}}</div>
-        <div class="col col-header">{{semesters[2].title}}</div>
-        <div class="col col-header">{{semesters[3].title}}</div>
-        <div class="col col-header">{{semesters[4].title}}</div>
+        <div class="col col-header">{{semesters[0].semester}}</div>
+        <div class="col col-header">{{semesters[1].semester}}</div>
+        <div class="col col-header">{{semesters[2].semester}}</div>
+        <div class="col col-header">{{semesters[3].semester}}</div>
+        <div class="col col-header">{{semesters[4].semester}}</div>
       </div>
-      <div class="row">
-        <div class="col col-20 col-availabilities-course">ING160</div>
-        <div class="col col-availabilities"> </div>
-        <div class="col col-availabilities">D</div>
-        <div class="col col-availabilities">DN</div>
-        <div class="col col-availabilities">N</div>
-        <div class="col col-availabilities">DN</div>
-      </div>
-      <div class="row">
-        <div class="col col-20 col-availabilities-course">ING150</div>
-        <div class="col col-availabilities">D</div>
-        <div class="col col-availabilities"> </div>
-        <div class="col col-availabilities">N</div>
-        <div class="col col-availabilities">DN</div>
-        <div class="col col-availabilities"> </div>
+      <div class="row" ng-repeat="course in coursesToDisplay">
+        <div class="col col-20 col-availabilities-course">{{course.course.title}}</div>
+        <div class="col col-availabilities">{{course.availabilities[0].availabilityValue}}</div>
+        <div class="col col-availabilities">{{course.availabilities[1].availabilityValue}}</div>
+        <div class="col col-availabilities">{{course.availabilities[2].availabilityValue}}</div>
+        <div class="col col-availabilities">{{course.availabilities[3].availabilityValue}}</div>
+        <div class="col col-availabilities">{{course.availabilities[4].availabilityValue}}</div>
       </div>
       <div class="row">
         <div class="col col-20 col-availabilities-info">D : Day<br>N : Night<br>DN : Day-Night</div>
-        <div class="col col-80 col-availabilities-info">* : Horaire particulier en mode accéléré<br> Qa : Assurance qualité<br> Ts : Technologies de la santé</div>
+        <div class="col col-80 col-availabilities-info">* : Special schedule Expedited<br> Qa : Quality assurance<br> Ts : Health technology</div>
       </div>
     </div>
     <!--<div class="list">-->
